appId: com.spiceup.app
---
- launchApp
- tapOn: "Earn"
- tapOn: "Staking"
- tapOn: "Claim Rewards"
- tapOn: "Confirm"
- waitForAnimationToEnd:
    timeout: 30000
- assertVisible: "Done"
