appId: com.spiceup.app
---
- launchApp
- tapOn: "Earn"
- tapOn: "Staking"
# Select first available pool
- tapOn: "Stake"
- inputText: "0.01"
- tapOn: "Confirm"
- waitForAnimationToEnd:
    timeout: 30000
- assertVisible: "Done"
