appId: com.spiceup.app
---
- launchApp
- tapOn: "Earn"
- tapOn: "Lending"
- tapOn: "Deposit"
- tapOn: "ETH"
- inputText: "0.01"
- tapOn: "Confirm"
- waitForAnimationToEnd:
    timeout: 30000
- assertVisible: "Done"
